# dashboard-mirror

./: CLAUDE.md  pyproject.toml
knowledge/: environment.md  index.yaml  output-structure.md
prompts/: analyst-data.md  analyst-ux.md  baseline.md  synthesizer.md
skills/collect/: SKILL.md
src/dashboard_mirror/: alerts.py  api.py  collect.py  collect_all.py  config.py  functions.py  health.py  schema.py  supplementary.py  traces.py
tests/: test_alerts.py  test_api.py  test_collect_all.py  test_functions.py  test_health.py  test_supplementary.py  test_traces.py
